# comfyui-marnodes

./: .gitignore  Credits.txt  README.md  __init__.py  marnodes.py  node_list.json  pyproject.toml
nodes/: img2dev.py  marnodes.py
web/: customcolors.js
