[project]
name = "comfyui-marnodes"
description = "marduk191s nodes."
version = "1.0.1"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/marduk191/comfyui-marnodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "marduk191"
DisplayName = "comfyui-marnodes"
Icon = ""
